...
You should have received a copy of the GNU General Public License
along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conversation_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".client.ConversationActivity">
...
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/unknownContactButton"
                style="@style/Widget.AppTheme.MainActionButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/ab_action_contact_add"
...
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <Button
                        android:id="@+id/btnBlock"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/block"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btnRefuse"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/decline"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btnAccept"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
...
