...
    <!-- Sections -->
    <string name="menu_item_contact_request">Contact requests</string>
    <string name="menu_item_accounts">Manage accounts</string>
    <string name="menu_item_account">Manage account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_advanced_settings">Advanced Settings</string>
    <string name="menu_item_account_settings">Account Settings</string>
    <string name="menu_item_plugin_list">Plugins Settings</string>
    <string name="menu_item_share">Share my account</string>
    <string name="menu_item_about">About Jami</string>

    <!-- Dialing Fragment -->
    <string name="dial_number">Dial a number</string>
...

    <string name="conversation_preference_color">Conversation color</string>
    <string name="conversation_preference_emoji">Conversation emoji</string>
    <string name="conversation_type_contact">Jami contact</string>
    <string name="conversation_type_private">Private Swarm</string>
    <string name="conversation_type_group">Group Swarm</string>
    <string name="conversation_contact_invited">%1$s was invited</string>
    <string name="conversation_contact_added">%1$s joined</string>
    <string name="conversation_contact_left">%1$s left</string>
    <string name="conversation_contact_banned">%1$s was banned</string>
    <string name="conversation_search_hint">Search conversation</string>

    <!-- Contacts -->
    <string name="add_call_contact_number_to_contacts">Add %1$s?</string>
...
