...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/photo">

        <TextView
            android:id="@+id/conv_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:gravity="start"
            android:singleLine="true"
            android:maxLines="1"
...
